<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="8dp"
    tools:context=".AddWorkoutActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/textView3"-->
    <!--        android:layout_width="76dp"-->
    <!--        android:layout_height="31dp"-->
    <!--        android:layout_marginTop="156dp"-->
    <!--        android:text="Activity"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/activities_spinner"-->
    <!--        app:layout_constraintHorizontal_bias="0.22"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="Add Activity"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/title_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:paddingRight="30dp"
            android:text="Title"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_activityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ems="10"
            android:gravity="right"
            android:inputType="text"
            android:hint="Add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_LinearLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left|center_vertical"
            android:paddingRight="30dp"
            android:text="Activity"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/activities_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|center_vertical"
            android:gravity="right|center_vertical"
            android:scrollbarSize="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/caloriesBurnt_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_LinearLayout"
        tools:layout_editor_absoluteX="0dp" >

        <TextView
            android:id="@+id/tv_caloriesBurnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left|center_vertical"
            android:paddingRight="30dp"
            android:text="Calories Burnt"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editNumber_caloriesBurnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_saveActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveActivity"
        android:text="Save Activity"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesBurnt_LinearLayout"
        app:layout_constraintVertical_bias="0.311" />


</androidx.constraintlayout.widget.ConstraintLayout>